--- a/package.json
+++ b/package.json
@@ -31,12 +31,17 @@
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.5",
+    "grunt-contrib-connect": "~0.7.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
   },
   "keywords": [
     "gruntplugin"
-  ]
+  ],
+  "dependencies": {
+    "request": "~2.36.0",
+    "lodash": "~2.4.1"
+  }
 }
