--- a/package.json
+++ b/package.json
@@ -1,52 +1,57 @@
 {
-    "name": "grunt-nest-proxy",
-    "description": "Like grunt-connect-proxy, but could be nested and more simpler",
-    "version": "0.1.1",
-    "homepage": "https://github.com/zjhiphop/grunt-nest-proxy",
-    "author": {
-        "name": "zjhiphop",
-        "email": "zjhiphop@gmail.com",
-        "url": "http://zjhiphop.github.com"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/zjhiphop/grunt-nest-proxy.git"
-    },
-    "bugs": {
-        "url": "https://github.com/zjhiphop/grunt-nest-proxy/issues"
-    },
-    "licenses": [{
-        "type": "MIT",
-        "url": "https://github.com/zjhiphop/grunt-nest-proxy/blob/master/LICENSE-MIT"
-    }],
-    "engines": {
-        "node": ">= 0.8.0"
-    },
-    "scripts": {
-        "test": "grunt test"
-    },
-    "devDependencies": {
-        "grunt-contrib-jshint": "^0.9.2",
-        "grunt-contrib-clean": "^0.5.0",
-        "grunt-contrib-nodeunit": "^0.3.3",
-        "grunt": "~0.4.0",
-        "grunt-contrib-connect": "~0.7.1"
-    },
-    "peerDependencies": {
-        "grunt": "~0.4.0"
-    },
-    "keywords": [
-        "plugin",
-        "proxy",
-        "connect",
-        "http",
-        "nest",
-        "grunt",
-        "git"
-    ],
-    "dependencies": {
-        "request": "~2.36.0",
-        "lodash": "~2.4.1",
-        "iniparser": "~1.0.5"
+  "name": "grunt-nest-proxy",
+  "description": "Like grunt-connect-proxy, but could be nested and more simpler",
+  "version": "0.1.1",
+  "homepage": "https://github.com/zjhiphop/grunt-nest-proxy",
+  "author": {
+    "name": "zjhiphop",
+    "email": "zjhiphop@gmail.com",
+    "url": "http://zjhiphop.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/zjhiphop/grunt-nest-proxy.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zjhiphop/grunt-nest-proxy/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/zjhiphop/grunt-nest-proxy/blob/master/LICENSE-MIT"
     }
+  ],
+  "engines": {
+    "node": ">= 0.8.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "devDependencies": {
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-nodeunit": "^0.3.3",
+    "grunt": "~0.4.0",
+    "grunt-contrib-connect": "~0.7.1",
+    "restler": "~3.2.2",
+    "form-data": "~0.1.3"
+  },
+  "peerDependencies": {
+    "grunt": "~0.4.0"
+  },
+  "keywords": [
+    "plugin",
+    "proxy",
+    "connect",
+    "http",
+    "nest",
+    "grunt",
+    "git"
+  ],
+  "dependencies": {
+    "request": "~2.36.0",
+    "lodash": "~2.4.1",
+    "iniparser": "~1.0.5",
+    "step": "0.0.5"
+  }
 }
